--- a/src/car/hire/view/LayoutView.form
+++ b/src/car/hire/view/LayoutView.form
@@ -116,6 +116,7 @@
                           <Component id="manageCategoriesButton" alignment="0" pref="173" max="32767" attributes="0"/>
                           <Component id="manageCarButton" alignment="0" pref="173" max="32767" attributes="0"/>
                           <Component id="manageCustomerButton" alignment="0" pref="173" max="32767" attributes="0"/>
+                          <Component id="newRentButton" alignment="0" pref="173" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -130,7 +131,9 @@
                       <Component id="manageCarButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="manageCustomerButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="363" max="32767" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="newRentButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="324" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -167,6 +170,17 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="manageCustomerButtonActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="newRentButton">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="14" style="1"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="New Rent"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="newRentButtonActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
